--- a/server/applicationrunserver/templates/base/Header.html
+++ b/server/applicationrunserver/templates/base/Header.html
@@ -18,11 +18,11 @@
                 <div class="hidden md:block">
                     <div class="ml-4 flex items-center md:ml-6">
                         <!-- User is not authenticated, hide the logout button -->
-                        {% if is_authenticated %}
+                        {% if user.is_authenticated and not user.is_superuser %}
                         <button class="ml-4 bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">Logout</button>
                         {% else %}
-                        <button class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">Login</button>
-                        <button class="ml-4 bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">Signup</button>
+                        <button class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" onclick="window.location.href='{% url 'SIGNINSERVICE' %}'">Signin</button>
+                        <button class="ml-4 bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" onclick="window.location.href='{% url 'SIGNUPSERVICE' %}'">Signup</button>
                         {% endif %}
                     </div>
                 </div>
