--- a/server/applicationrunserver/templates/auth/signUpService.html
+++ b/server/applicationrunserver/templates/auth/signUpService.html
@@ -1,190 +1,252 @@
-{% extends '../base/Header.html' %}
-
-{% block main %}
+{% extends '../base/Header.html' %} {% block main %}
 
 <style>
-    .loader {
-        border-top-color: #3498db;
-        -webkit-animation: spinner 1.5s linear infinite;
-        animation: spinner 1.5s linear infinite;
+  .loader {
+    border-top-color: #3498db;
+    -webkit-animation: spinner 1.5s linear infinite;
+    animation: spinner 1.5s linear infinite;
+  }
+
+  @-webkit-keyframes spinner {
+    0% {
+      -webkit-transform: rotate(0deg);
     }
 
-    @-webkit-keyframes spinner {
-        0% {
-            -webkit-transform: rotate(0deg);
-        }
+    100% {
+      -webkit-transform: rotate(360deg);
+    }
+  }
 
-        100% {
-            -webkit-transform: rotate(360deg);
-        }
+  @keyframes spinner {
+    0% {
+      transform: rotate(0deg);
     }
 
-    @keyframes spinner {
-        0% {
-            transform: rotate(0deg);
-        }
-
-        100% {
-            transform: rotate(360deg);
-        }
+    100% {
+      transform: rotate(360deg);
     }
+  }
 </style>
 
 <div class="container mx-auto px-4 py-8">
-    <h2 class="text-2xl font-bold mb-4">Sign Up</h2>
-    <form id="signup-form">
-        {% csrf_token %}
-        <div class="mb-4">
-            <label for="name" class="block mb-1">Name:</label>
-            <input type="text" id="name" name="name" required class="w-full px-4 py-2 border border-gray-300 rounded">
-            <label id="statusname" class="text-red-500"></label>
-        </div>
-        <div class="mb-4">
-            <label for="lastname" class="block mb-1">Last Name:</label>
-            <input type="text" id="lastname" name="lastname" required
-                class="w-full px-4 py-2 border border-gray-300 rounded">
-            <label id="statuslastname" class="text-red-500"></label>
-        </div>
-        <div class="mb-4">
-            <label for="lastname" class="block mb-1">Username:</label>
-            <input type="text" id="username" name="username" required
-                class="w-full px-4 py-2 border border-gray-300 rounded">
-            <label id="statususername" class="text-red-500"></label>
-        </div>
-        <div class="mb-4">
-            <label for="email" class="block mb-1">Email:</label>
-            <input type="email" id="email" name="email" required
-                class="w-full px-4 py-2 border border-gray-300 rounded">
-            <label id="statusemail" class="text-red-500"></label>
-        </div>
-        <div class="mb-4">
-            <label for="password" class="block mb-1">Password:</label>
-            <input type="password" id="password" name="password" required
-                class="w-full px-4 py-2 border border-gray-300 rounded">
-            <label id="statuspassword" class="text-red-500"></label>
-        </div>
-        <div class="mb-4">
-            <label for="phoneNumber" class="block mb-1">Phone Number:</label>
-            <input type="tel" id="phoneNumber" name="phoneNumber" required
-                class="w-full px-4 py-2 border border-gray-300 rounded">
-            <label id="statusphone" class="text-red-500"></label>
-        </div>
-        <div class="mb-4">
-            <input type="submit" value="Sign Up" class="bg-green-500 text-white px-4 py-2 rounded cursor-pointer">
-        </div>
+  <h2 class="text-2xl font-bold mb-4">Sign Up</h2>
+  <form id="signup-form">
+    {% csrf_token %}
+    <div class="mb-4">
+      <label for="name" class="block mb-1">Name:</label>
+      <input
+        type="text"
+        id="name"
+        name="name"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded"
+      />
+      <label id="statusname" class="text-red-500"></label>
+    </div>
+    <div class="mb-4">
+      <label for="lastname" class="block mb-1">Last Name:</label>
+      <input
+        type="text"
+        id="lastname"
+        name="lastname"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded"
+      />
+      <label id="statuslastname" class="text-red-500"></label>
+    </div>
+    <div class="mb-4">
+      <label for="lastname" class="block mb-1">Username:</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded"
+      />
+      <label id="statususername" class="text-red-500"></label>
+    </div>
+    <div class="mb-4">
+      <label for="email" class="block mb-1">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded"
+      />
+      <label id="statusemail" class="text-red-500"></label>
+    </div>
+    <div class="mb-4">
+      <label for="password" class="block mb-1">Password:</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded"
+      />
+      <label id="statuspassword" class="text-red-500"></label>
+    </div>
+    <div class="mb-4">
+      <label for="phoneNumber" class="block mb-1">Phone Number:</label>
+      <input
+        type="tel"
+        id="phoneNumber"
+        name="phoneNumber"
+        required
+        class="w-full px-4 py-2 border border-gray-300 rounded"
+      />
+      <label id="statusphone" class="text-red-500"></label>
+    </div>
+    <div class="mb-4">
+      <input
+        type="submit"
+        value="Sign Up"
+        class="bg-green-500 text-white px-4 py-2 rounded cursor-pointer"
+      />
+    </div>
 
-        <label id="statusValidationDataSintax" class="text-red-500"></label>
-        <label id="statusValidationDataUnavailable" class="text-red-500"></label>
-        <label id="statusValidationDataCreated" class="text-green-500"></label>
+    <label id="statusValidationDataSintax" class="text-red-500"></label>
+    <label id="statusValidationDataUnavailable" class="text-red-500"></label>
+    <label id="statusValidationDataCreated" class="text-green-500"></label>
 
-        <div id="loading" class=""></div>
-
-
-    </form>
+    <div id="loading" class=""></div>
+  </form>
 </div>
 
-
-
 <script>
-    document.getElementById("signup-form").addEventListener("submit", async event => {
-        event.preventDefault(); // Prevent the form from submitting
-        document.getElementById("loading").classList.add("loader");
-        document.getElementById("loading").classList.add("ease-linear");
-        document.getElementById("loading").classList.add("rounded-full");
-        document.getElementById("loading").classList.add("border-4");
-        document.getElementById("loading").classList.add("border-t-4");
-        document.getElementById("loading").classList.add("border-gray-200");
-        document.getElementById("loading").classList.add("h-12");
-        document.getElementById("loading").classList.add("w-12");
-        document.getElementById("loading").classList.add("mb-4");
-        document.getElementById("statusValidationDataCreated").className = ""
-        document.getElementById("statusValidationDataSintax").textContent = ""
-        document.getElementById("statusValidationDataUnavailable").textContent = ""
-        document.getElementById("statusValidationDataCreated").textContent = "";
-        // Get the form data
-        var name = document.getElementById("name").value;
-        var lastname = document.getElementById("lastname").value;
-        var username = document.getElementById("username").value;
-        var email = document.getElementById("email").value;
-        var password = document.getElementById("password").value;
-        var phoneNumber = document.getElementById("phoneNumber").value;
+  document
+    .getElementById("signup-form")
+    .addEventListener("submit", async (event) => {
+      event.preventDefault(); // Prevent the form from submitting
+      document.getElementById("loading").classList.add("loader");
+      document.getElementById("loading").classList.add("ease-linear");
+      document.getElementById("loading").classList.add("rounded-full");
+      document.getElementById("loading").classList.add("border-4");
+      document.getElementById("loading").classList.add("border-t-4");
+      document.getElementById("loading").classList.add("border-gray-200");
+      document.getElementById("loading").classList.add("h-12");
+      document.getElementById("loading").classList.add("w-12");
+      document.getElementById("loading").classList.add("mb-4");
+      document.getElementById("statusValidationDataCreated").className = "";
+      document.getElementById("statusValidationDataSintax").textContent = "";
+      document.getElementById("statusValidationDataUnavailable").textContent =
+        "";
+      document.getElementById("statusValidationDataCreated").textContent = "";
+      // Get the form data
+      var name = document.getElementById("name").value;
+      var lastname = document.getElementById("lastname").value;
+      var username = document.getElementById("username").value;
+      var email = document.getElementById("email").value;
+      var password = document.getElementById("password").value;
+      var phoneNumber = document.getElementById("phoneNumber").value;
 
-        // Create the request body
-        var requestBody = {
-            name: name,
-            lastname: lastname,
-            username: username,
-            email: email,
-            password: password,
-            phoneNumber: phoneNumber
-        };
+      // Create the request body
+      var requestBody = {
+        name: name,
+        lastname: lastname,
+        username: username,
+        email: email,
+        password: password,
+        phoneNumber: phoneNumber,
+      };
 
-        // Get the CSRF token
-        var csrfToken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-        // Add the CSRF token to the request headers
-        var headers = {
-            "Content-Type": "application/json",
-            "X-CSRFToken": csrfToken
-        };
-        try {
-            const response = await fetch("/auth/signUp/", {
-                method: "POST",
-                headers: headers,
-                body: JSON.stringify(requestBody)
-            })
-            response.json().then(data => {
-                //document.getElementById("loading").style.cssText.display = "none"
-                document.getElementById("loading").className = ""; // Remove all CSS classes from the "loading" element
-                var statusLabels = document.querySelectorAll("[id^='status']");
-                statusLabels.forEach(label => {
-                    label.textContent = "";
+      // Get the CSRF token
+      var csrfToken = document.getElementsByName("csrfmiddlewaretoken")[0]
+        .value;
+      // Add the CSRF token to the request headers
+      var headers = {
+        "Content-Type": "application/json",
+        "X-CSRFToken": csrfToken,
+      };
+      try {
+        const response = await fetch("/auth/signUp/", {
+          method: "POST",
+          headers: headers,
+          body: JSON.stringify(requestBody)
+        });
+        response.json().then((data) => {
+          //document.getElementById("loading").style.cssText.display = "none"
+          document.getElementById("loading").className = ""; // Remove all CSS classes from the "loading" element
+          var statusLabels = document.querySelectorAll("[id^='status']");
+          statusLabels.forEach((label) => {
+            label.textContent = "";
+          });
+          if (data.ok === true) {
+            if (data.userCreated) {
+              document
+                .getElementById("statusValidationDataCreated")
+                .classList.add("text-green-500");
+              document.getElementById(
+                "statusValidationDataCreated"
+              ).textContent = data.message;
+              document.getElementById("name").value = "";
+              document.getElementById("lastname").value = "";
+              document.getElementById("username").value = "";
+              document.getElementById("email").value = "";
+              document.getElementById("password").value = "";
+              document.getElementById("phoneNumber").value = "";
+            } else {
+              document
+                .getElementById("statusValidationDataCreated")
+                .classList.add("text-red-500");
+              document.getElementById(
+                "statusValidationDataCreated"
+              ).textContent = data.message;
+              document.getElementById(
+                "statusValidationDataSintax"
+              ).textContent = data.statusValidationDataSintax;
+              document.getElementById(
+                "statusValidationDataUnavailable"
+              ).textContent = data.statusValidationDataUnavailable;
+              if (data.statusSintaxDataVaidation) {
+                data.statusSintaxDataVaidation.forEach((element) => {
+                  if (!element.state) {
+                    document.getElementById(
+                      "status" + element.nameField
+                    ).textContent =
+                      "Invalid sintax data this field is required , at least 4 chars and at most 30 chars ";
+                  } else {
+                    document.getElementById(
+                      "status" + element.nameField
+                    ).textContent = "";
+                  }
                 });
-                if (data.ok === true) {
-                    if (data.userCreated) {
-                        document.getElementById("statusValidationDataCreated").classList.add("text-green-500");
-                        document.getElementById("statusValidationDataCreated").textContent = data.message
-                        document.getElementById("name").value = "";
-                        document.getElementById("lastname").value = "";
-                        document.getElementById("username").value = "";
-                        document.getElementById("email").value = "";
-                        document.getElementById("password").value = "";
-                        document.getElementById("phoneNumber").value = "";
-                    } else {
-                        document.getElementById("statusValidationDataCreated").classList.add("text-red-500");
-                        document.getElementById("statusValidationDataCreated").textContent = data.message
-                        document.getElementById("statusValidationDataSintax").textContent = data.statusValidationDataSintax;
-                        document.getElementById("statusValidationDataUnavailable").textContent = data.statusValidationDataUnavailable;
-                        if (data.statusSintaxDataVaidation) {
-                            data.statusSintaxDataVaidation.forEach(element => {
-                                if (!element.state) {
-                                    document.getElementById("status" + element.nameField).textContent = "Invalid sintax data this field is required , at least 4 chars and at most 30 chars ";
-                                } else {
-                                    document.getElementById("status" + element.nameField).textContent = ""
-                                }
-                            });
-                        }
-                        if (data.statusUnavailableDataVaidation) {
-                            data.statusUnavailableDataVaidation.forEach(element => {
-                                if (!element.state) {
-                                    document.getElementById("status" + element.nameField).textContent = document.getElementById("status" + element.nameField).textContent.split("@")[0].trim();
-                                    document.getElementById("status" + element.nameField).textContent += " @ Data has been already  registered choose another one . ";
-                                } else {
-                                    document.getElementById("status" + element.nameField).textContent = document.getElementById("status" + element.nameField).textContent.split("@")[0].trim();
-                                }
-                            })
-                        }
-                    }
-                }
-            });
+              }
+              if (data.statusUnavailableDataVaidation) {
+                data.statusUnavailableDataVaidation.forEach((element) => {
+                  if (!element.state) {
+                    document.getElementById(
+                      "status" + element.nameField
+                    ).textContent = document
+                      .getElementById("status" + element.nameField)
+                      .textContent.split("@")[0]
+                      .trim();
+                    document.getElementById(
+                      "status" + element.nameField
+                    ).textContent +=
+                      " @ Data has been already  registered choose another one . ";
+                  } else {
+                    document.getElementById(
+                      "status" + element.nameField
+                    ).textContent = document
+                      .getElementById("status" + element.nameField)
+                      .textContent.split("@")[0]
+                      .trim();
+                  }
+                });
+              }
+            }
+          }
+        });
+      } catch (error) {
+        // Handle any errors
+        console.error(error);
+        alert("Unexpected error. Please reload the page and try again!");
+      }
 
-        } catch (error) {
-            // Handle any errors
-            console.error(error);
-            alert("Unexpected error. Please reload the page and try again!");
-        }
-
-        // Reset the form
-        //document.getElementById("signup-form").reset();
+      // Reset the form
+      //document.getElementById("signup-form").reset();
     });
 </script>
 
