--- a/server/applicationrunserver/templates/auth/forgetPasswordSt1Service.html
+++ b/server/applicationrunserver/templates/auth/forgetPasswordSt1Service.html
@@ -30,7 +30,7 @@
 
 <div class="container mx-auto px-4">
   <h1 class="text-2xl font-bold mb-4 text-center mt-5">
-    Resend Email Verifier
+    Recovery your account if you forget the password here !
   </h1>
   <form class="max-w-md mx-auto">
     {% csrf_token %}
@@ -50,7 +50,7 @@
       type="submit"
       class="bg-indigo-500 text-white py-2 px-4 rounded-md hover:bg-indigo-600"
     >
-      Get activator
+      Get Recovery
     </button>
     <label id="statusValidator"></label>
     <div id="loading" class=""></div>
@@ -75,14 +75,14 @@
       email: email,
     };
     // Get the CSRF token
-    var csrfToken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+    const csrfToken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
     // Add the CSRF token to the request headers
-    var headers = {
+    const headers = {
       "Content-Type": "application/json",
       "X-CSRFToken": csrfToken,
     };
     try {
-      const response = await fetch("/auth/account/resendActivator/", {
+      const response = await fetch("/auth/account/forgetPassword/", {
         method: "POST",
         headers: headers,
         body: JSON.stringify(requestBody),
@@ -95,8 +95,10 @@
         document.getElementById("statusValidator").className = "text-red-500";
       }
       document.getElementById("statusValidator").textContent = jsonData.message;
-      document.getElementById("loading").className = ""; // Remove all CSS classes from the "loading" element
-    } catch (error) {}
+    } catch (error) {
+      alert("Unexpected error try again later .");
+    }
+    document.getElementById("loading").className = "";
   });
 </script>
 
