--- a/server/applicationrunserver/templates/auth/signInService.html
+++ b/server/applicationrunserver/templates/auth/signInService.html
@@ -1,37 +1,95 @@
-{% extends '../base/Header.html' %} 
+{% extends '../base/Header.html' %}
 {% block main %}
 <div class="flex justify-center items-center h-screen">
     <div class="w-full max-w-md">
-        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+        <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4" id="signInForm">
+            {% csrf_token %}
+            {% load socialaccount %}
             <div class="mb-4">
                 <h1 class="text-2xl font-bold mb-4">Sign In</h1>
-            <div class="mb-4">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-                    Username
-                </label>
-                <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                    id="username" type="text" placeholder="Enter your username">
-            </div>
-            <div class="mb-6">
-                <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-                    Password
-                </label>
-                <input
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                    id="password" type="password" placeholder="Enter your password">
-            </div>
-            <div class="flex items-center justify-between">
-                <button
-                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                    type="submit">
-                    Sign In
-                </button>
-                <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
-                    href="#">Forgot Password?</a>
-            </div>
+                <div class="mb-4">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+                        Username
+                    </label>
+                    <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                        id="username" type="text" placeholder="Enter your username">
+                </div>
+                <div class="mb-6">
+                    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+                        Password
+                    </label>
+                    <input
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+                        id="password" type="password" placeholder="Enter your password">
+                </div>
+                <div class="flex items-center justify-between">
+                    <button
+                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                        type="submit">
+                        Sign In
+                    </button>
+                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
+                        href='{% url 'FORGETPASSWORDST1SERVICE' %}'>Forgot Password?</a>
+                </div>
+                <a
+                    class="bg-red-500 hover:bg-red-700 mt-3 w-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-4"
+                    href="{% provider_login_url 'google' %}?next=/"
+                    >
+                    Google
+                  </a>
+                <label id="statusValidator"></label>
+                <div id="loading" class=""></div>
         </form>
     </div>
 </div>
-{% endblock %}
 
+<script>
+    document.getElementById("signInForm").addEventListener("submit", async (event) => {
+        event.preventDefault(); // Prevent default form submission behavior
+        document.getElementById("loading").classList.add("loader");
+        document.getElementById("loading").classList.add("ease-linear");
+        document.getElementById("loading").classList.add("rounded-full");
+        document.getElementById("loading").classList.add("border-4");
+        document.getElementById("loading").classList.add("border-t-4");
+        document.getElementById("loading").classList.add("border-gray-200");
+        document.getElementById("loading").classList.add("h-12");
+        document.getElementById("loading").classList.add("w-12");
+        document.getElementById("loading").classList.add("mb-4");
+        // Retrieve the values entered in the username and password fields
+        const username = document.getElementById("username").value;
+        const password = document.getElementById("password").value;
+        // Package the data into an object or a JSON string
+        const requestBody = {
+            username: username,
+            password: password
+        };
+        // Get the CSRF token
+        const csrfToken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+        // Add the CSRF token to the request headers
+        const headers = {
+            "Content-Type": "application/json",
+            "X-CSRFToken": csrfToken,
+        };
+        try {
+            const response = await fetch("/auth/signIn/", {
+                method: "POST",
+                headers: headers,
+                body: JSON.stringify(requestBody),
+            })
+            const jsonData = await response.json()
+            if (jsonData.ok) {
+                window.location.href = "/dashboard/"; // Redirect to "/dashboard/"
+            } else {
+                document.getElementById("statusValidator").className = "text-red-500";
+                document.getElementById("statusValidator").textContent = jsonData.message;
+            }
+        } catch (error) {
+            location.reload()
+            //alert("Unexpected error. Please try again later.");
+        }
+        document.getElementById("loading").className = "";
+    });
+</script>
+
+{% endblock %}
